Bug 331353 - Detailed scam report generates an non-UTF-8 enconded file
Summary: Detailed scam report generates an non-UTF-8 enconded file
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.11.5
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-02-20 20:53 UTC by André Marcelo Alvarenga
Modified: 2014-02-21 06:24 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.12.3
Sentry Crash Report:


Attachments
HTML file (956 bytes, text/html)
2014-02-20 20:54 UTC, André Marcelo Alvarenga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description André Marcelo Alvarenga 2014-02-20 20:53:38 UTC
When I save a detailed scam report, the result is a non-UTF-8 enconded file named 'scam-detection.html'.



Reproducible: Always

Steps to Reproduce:
- Select a suspected email scam
- In "This message may be a scam. (Details...)" click on Details...
- Click on "Save As..." button
- Click on "Save" to save the scam-detection.html file.
Actual Results:  
non-UTF-8 enconded file

Expected Results:  
UTF-8 enconded file

Using pt_BR translations.


The file opens correctly if I add the line as described below. 

<html> 
<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/> 
<head>
Comment 1 André Marcelo Alvarenga 2014-02-20 20:54:28 UTC
Created attachment 85249 [details]
HTML file
Comment 2 Laurent Montel 2014-02-21 06:11:32 UTC
I confirm it.
Comment 3 Laurent Montel 2014-02-21 06:24:03 UTC
Git commit ea3209fe75c82078ff3e6e8fc061071c12df31bb by Montel Laurent.
Committed on 21/02/2014 at 06:23.
Pushed by mlaurent into branch 'KDE/4.12'.

Fix Bug 331353 - Detailed scam report generates an non-UTF-8 enconded file

FIXED-IN: 4.12.3

M  +3    -1    messageviewer/scamdetection/scamdetectiondetailsdialog.cpp

http://commits.kde.org/kdepim/ea3209fe75c82078ff3e6e8fc061071c12df31bb