Fix Bug 331353 - Detailed scam report generates an non-UTF-8 enconded file

FIXED-IN: 4.12.3
BUG: 331353